--- a/rpc-web-daily.yml
+++ b/rpc-web-daily.yml
@@ -17,7 +17,7 @@ dubbo:
     name: rpc-web
   registry:
     protocol: zookeeper
-    address: ${ZOOKEEPER_SERVER:ip:port,ip:port,ip:port}
+    address: ${ZOOKEEPER_SERVER:127.0.0.1:2181}
   consumer:
     group: daily
 
