--- a/rpc-web-daily.yml
+++ b/rpc-web-daily.yml
@@ -12,14 +12,14 @@ spring:
         max-idle: 50
         min-idle: 10
 
-dubbo:
-  application:
-    name: rpc-web
-  registry:
-    protocol: zookeeper
-    address: ${ZOOKEEPER_SERVER:127.0.0.1:2181}
-  consumer:
-    group: ${SPRING_SERVICE:daily}
+#dubbo:
+#  application:
+#    name: rpc-web
+#  registry:
+#    protocol: zookeeper
+#    address: ${ZOOKEEPER_SERVER:127.0.0.1:2181}
+#  consumer:
+#    group: ${SPRING_SERVICE:daily}
 
 management:
   server:
