--- a/rpc-web-daily.yml
+++ b/rpc-web-daily.yml
@@ -25,6 +25,6 @@ dubbo:
     group: daily
     version: 1.0.0
 
-management:
-  server:
-    port: 10013
+#management:
+#  server:
+#    port: 10013
