--- a/rpc-account-test.yml
+++ b/rpc-account-test.yml
@@ -50,10 +50,14 @@ dubbo:
   application:
     name: rpc-account
   registry:
+    check: false
+    id: zkreg
     protocol: zookeeper
-    address: ${ZOOKEEPER_SERVER:ip:port,ip:port,ip:port}
+    address: 127.0.0.1:2181
   provider:
+    check: false
     group: test
+    version: 1.0.0
 
 aes:
   key: 1234567887654321
