--- a/rpc-account-daily.yml
+++ b/rpc-account-daily.yml
@@ -55,6 +55,7 @@ dubbo:
     protocol: zookeeper
     address: 127.0.0.1:2181
   provider:
+    threads: 300
     check: false
     group: daily
     version: 1.0.0
