--- a/rpc-account-daily.yml
+++ b/rpc-account-daily.yml
@@ -4,11 +4,11 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.210.18:3306/payCenter?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=UTC&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true
-    username: test
-    password: y8BWspYF5tAuQxKONc29heyuL22FnVkJyejEQsw9NrE=
     druid:
+      driverClassName: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://192.168.210.18:3306/payCenter?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=UTC&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+      username: test
+      password: y8BWspYF5tAuQxKONc29heyuL22FnVkJyejEQsw9NrE=
       initial-size: 10
       max-active: 100
       min-idle: 10
@@ -17,7 +17,7 @@ spring:
       max-pool-prepared-statement-per-connection-size: 20
       time-between-eviction-runs-millis: 60000
       min-evictable-idle-time-millis: 300000
-      connection-properties: password=${spring.datasource.password};aesKey=${aes.key}
+      connection-properties: password=${spring.datasource.druid.password};aesKey=${aes.key}
       password-callback-class-name: com.nuonuo.rpcaccount.config.DruidConfig
       validation-query: SELECT 1 FROM DUAL
       test-while-idle: true
